--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "masa",
   "version": "2.0.0",
   "type": "module",
-  "description": "Стартовый шаблон сборки Лиги А",
+  "description": "Сайт международного проекта Маса",
   "browserslist": [
     "last 3 versions",
     "IE 11",
